# Monopoly

./: CMakeLists.txt  LICENSE  README.txt  log_computer.txt  log_human.txt
include/: Computer.h  Human.h  Land.h  Match.h  Player.h  Table.h
src/: Computer.cpp  Human.cpp  Land.cpp  Match.cpp  Monopoly.cpp  Player.cpp  Table.cpp
